k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: silly-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: silly-demo
    spec:
      containers:
      - env:
        - name: DB_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: host
              name: silly-demo-app
        - name: DB_PORT
          valueFrom:
            secretKeyRef:
              key: port
              name: silly-demo-app
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: silly-demo-app
        - name: DB_PASS
          valueFrom:
            secretKeyRef:
              key: password
              name: silly-demo-app
        - name: DB_NAME
          value: app
        image: ghcr.io/vfarcic/silly-demo:1.4.301
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        name: silly-demo
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: silly-demo
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
spec:
  rules:
  - host: silly-demo.com
    http:
      paths:
      - backend:
          service:
            name: silly-demo
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: silly-demo-frontend
  name: silly-demo-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: silly-demo-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: silly-demo-frontend
    spec:
      containers:
      - env:
        - name: REACT_APP_BACKEND_URL
          value: http://silly-demo.com
        image: ghcr.io/vfarcic/silly-demo-frontend:0.0.3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
        name: silly-demo-frontend
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: silly-demo-frontend
  name: silly-demo-frontend
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: silly-demo-frontend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: silly-demo-frontend
  name: silly-demo-frontend
spec:
  rules:
  - host: silly-demo-frontend.com
    http:
      paths:
      - backend:
          service:
            name: silly-demo-frontend
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
---
